# render

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  sdl.cmake  variables.cmake
source/: lib.cpp  main.cpp
src/: main.cpp
src/backend/SDL3/: render.cpp  render.hpp
src/engine/: arena.cpp  arena.hpp  command.hpp  engine.cpp  engine.hpp  input.hpp  vec.hpp
src/flip/: flip.hpp
test/: CMakeLists.txt
test/source/: render_test.cpp
